# SudokuSolver

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile
libs/: CMakeLists.txt
src/: CMakeLists.txt  Games.cpp  Games.hpp  GlobalDefinitions.hpp  main.cpp
src/Board/: CMakeLists.txt  ElementList.hpp  ElementWrapper.hpp  ElementsContainer.hpp  Grid.cpp  Grid.hpp  GridPrinter.cpp  GridPrinter.hpp  Line.cpp  Line.hpp  Region.cpp  Region.hpp  Subgrid.cpp  Subgrid.hpp  Tile.cpp  Tile.hpp
src/GamesManager/: CMakeLists.txt  Games.cpp  Games.hpp
src/Solver/: CMakeLists.txt  Reporter.cpp  Reporter.hpp  Solver.cpp  Solver.hpp  SolverRegions.cpp  SolverRegions.hpp  SolverTile.cpp  SolverTile.hpp  SolverTypes.hpp  SolverUtils.cpp  SolverUtils.hpp  SuggestionsQuantity.cpp  SuggestionsQuantity.hpp  Technique.cpp  Technique.hpp
src/Solver/Techniques/: HiddenPairs.cpp  HiddenPairs.hpp  HiddenUniqueRectangles.cpp  HiddenUniqueRectangles.hpp  NakedPairs.cpp  NakedPairs.hpp  NakedTriples.cpp  NakedTriples.hpp  PointingPair.cpp  PointingPair.hpp  Singles.cpp  Singles.hpp  SinglesChains.cpp  SinglesChains.hpp  SinglesRegion.cpp  SinglesRegion.hpp  SinglesTile.cpp  SinglesTile.hpp  UniqueRectangles.cpp  UniqueRectangles.hpp  UniqueRetangles.cpp  UniqueRetangles.hpp
src/Solver/Techniques/Tools/: Chain.cpp  Chain.hpp  Traversal.cpp  Traversal.hpp  UniqueRectanglesCreator.cpp  UniqueRectanglesCreator.hpp
src/Util/: CMakeLists.txt  GlobalDefinitions.cpp  GlobalDefinitions.hpp  UtilFunctions.cpp  UtilFunctions.hpp
tests/: CMakeLists.txt
tests/Board/: CMakeLists.txt  ComponentsContructorTest.cpp  ElementList.cpp  ElementListTest.cpp  Tile.cpp  (+6 more)
(+3 files in other folders)
